# command_center

./: README.md
Behavior_Planner/simple_behavior_planner/: CMakeLists.txt  package.xml
Behavior_Planner/simple_behavior_planner/config/: behavior_modifiers.yaml  smppi_params.yaml
Behavior_Planner/simple_behavior_planner/launch/: simple_behavior_planner.launch.py
Behavior_Planner/simple_behavior_planner/scripts/: simple_behavior_planner_node.py  simple_behavior_planner_node.py.backup  test_behavior_params.py  test_per.py
Behavior_Planner/simple_behavior_planner/simple_behavior_planner/: __init__.py  behavior_controller.py  behavior_parameter_manager.py  path_manager.py  safety_monitor.py  waypoint_publisher.py
Global_path_planner/sequential_global_planner/: CMakeLists.txt  package.xml
Global_path_planner/sequential_global_planner/launch/: sequential_planner.launch.py
Global_path_planner/sequential_global_planner/maps/: 20250807.json  20250807_v2.json  20250807_v3.json  m.json  mando.csv
Global_path_planner/sequential_global_planner/scripts/: sequential_planner_node.py
Global_path_planner/sequential_global_planner/scripts/utils/: __init__.py  map_loader.py  visualization.py
Global_path_planner/sequential_global_planner/utils/: csv_to_json_converter.py
GraphMap_Server/: CMakeLists.txt  package.xml  requirements.txt
GraphMap_Server/launch/: map_service.launch.py
GraphMap_Server/maps/: 3x3_map.json  D2_pp-b_2.json  DCU_playground_v2.json  SSC_map_d2.json  branch_road.json  ddddddddddddddddddddd.json  gazebo_test.json  mando-merge-base.json  mando2.json  mando_full_map.json  mando_real_final.json  mando_v1.json  mando_v2.json  new_path copy 2.json  new_path copy.json  new_path(14).json  new_path(15).json  new_path.json  pal_2.json  sim_BA.json  sim_BB.json  zzzzz.json
GraphMap_Server/maps/old/: D2_PP_A_last1.json  D2_pp-a_2.json  D2_pp_b_test1.json  DCU-merge-base.json  DCU_playground_v1.json  T_1.json  T_2.json  T_2_new.json  baebaebae.json  d2-merge-base(1).json  d2-merge-base(2).json  d2-merge-base(3).json  d2-merge-base(4).json  d2-merge-base_semi.json  d2-merge-base_semi_final.json  d2_pp-a_v2.json  d2_pp-b_v1.json  d2_v1.json  d2d2d2_a(1).json  mando_last.json  mando_last_mid.json  mando_test_2.0.json  pal_1(2).json  pal_2(2).json  pal_right.json  path_20250922_164120(2).json  path_20250922_164120(3).json  path_20250922_164120.json  sim_AA.json  sim_AB.json  test.json  test_mando_BB.json
GraphMap_Server/msg/: GpsInfo.msg  GraphMap.msg  MapData.msg  MapLink.msg  MapNode.msg  UtmInfo.msg
GraphMap_Server/src/: map_service_node.cpp
GraphMap_Server/srv/: LoadMap.srv
GraphMap_Server/tools/: 0_30.json  60_90.json  README.md  bag_to_map_generator.py  csv_to_map_generator.py  demo_map.json  mando_d2.json  map_relocator.py  map_visualizer.py  requirements.txt  test_0.5s.json  test_10_to_40s.json
ROS_PathPlanning_pkg/: CMakeLists.txt  package.xml
behavior_planner/simple_behavior_planner/: CMakeLists.txt  package.xml
behavior_planner/simple_behavior_planner/launch/: simple_behavior_planner.launch.py
behavior_planner/simple_behavior_planner/msg/: MPPIParams.msg
command_center_interfaces/: CMakeLists.txt  package.xml
command_center_launch/: CMakeLists.txt  package.xml
command_center_launch/config/: gazebo.yaml
command_center_launch/launch/: branch_test.launch.py  command_center.launch.py  new_localization.launch.py  sim_system.launch.py  system.launch.py
controller/bae_mppi/: CMakeLists.txt  README.md  package.xml  requirements.txt
controller/bae_mppi/bae_mppi_core/: cost_functions.py  dynamics.py  visualizer.py
controller/bae_mppi/bae_mppi_core/pytorch_mppi/: __init__.py  autotune.py  autotune_global.py  autotune_qd.py  mppi.py
controller/bae_mppi/bae_mppi_core/pytorch_mppi/install/: local_setup.sh  setup.sh
controller/bae_mppi/bae_mppi_core/pytorch_mppi/log/: latest_build
controller/bae_mppi/config/: mppi_params _ssc.yaml  mppi_params.yaml  topic_config.yaml  topic_config_ssc.yaml
controller/bae_mppi/launch/: mppi_distributed.launch.py  ssc_mppi_distributed.launch.py
controller/bae_mppi/msg/: HighCostPath.msg  MPPIState.msg  OptimalPath.msg  ProcessedObstacles.msg
controller/bae_mppi/scripts/: mppi_core_node.py  sensor_processor_node.py  steering_validation_node.py  visualization_node.py
controller/smppi/: CMakeLists.txt  package.xml
controller/smppi/config/: smppi_params.yaml
controller/smppi/launch/: smppi_controller.launch.py
controller/smppi/msg/: HighCostPath.msg  MPPIState.msg  OptimalPath.msg  ProcessedObstacles.msg
controller/smppi/scripts/: mppi_main_node.py  sensor_processor_node.py  smppi_controller_node.py  test_param_update.py  visualization_node.py
controller/smppi/smppi_controller/: __init__.py
controller/smppi/smppi_controller/critics/: __init__.py  base_critic.py  control_critic.py  goal_critic.py  obstacle_critic.py
controller/smppi/smppi_controller/motion_models/: __init__.py  ackermann_model.py
controller/smppi/smppi_controller/optimizer/: __init__.py  smppi_optimizer.py  trajectory_sampler.py
controller/smppi/smppi_controller/utils/: __init__.py  geometry.py  sensor_processor.py  transforms.py
costmap/local_costmap_2d/: CMakeLists.txt.backup  README.md  package.xml  setup.cfg  setup.py
costmap/local_costmap_2d/config/: costmap_params.yaml
costmap/local_costmap_2d/include/local_costmap_2d/: cost_values.hpp  pointcloud_filters.hpp  pointcloud_processor.hpp
costmap/local_costmap_2d/include_cpp_backup/local_costmap_2d/: costmap_2d.hpp  costmap_publisher.hpp
costmap/local_costmap_2d/launch/: local_costmap.launch.py  local_costmap_auto.launch.py
costmap/local_costmap_2d/local_costmap_2d/: __init__.py  cost_values.py  costmap_2d.py  costmap_publisher.py  local_costmap_node.py  pointcloud_filters.py  pointcloud_processor.py
costmap/local_costmap_2d/src/: costmap_2d.cpp  local_costmap_node.cpp  pointcloud_processor.cpp
costmap/local_costmap_2d/src_cpp_backup/: costmap_publisher.cpp  pointcloud_filters.cpp
costmap/simple_costmap_2d/: setup.py  (+2 more)
simple_behavior_planner/: README.md
(+21 files in other folders)
