<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>command_center_launch</name>
  <version>0.0.1</version>
  <description>Launch files for Command Center system integration</description>
  <maintainer email="user@domain.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>sequential_global_planner</exec_depend>
  <exec_depend>simple_behavior_planner</exec_depend>
  <exec_depend>bae_mppi</exec_depend>
  <exec_depend>smppi</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>