<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_costmap_2d</name>
  <version>1.0.0</version>
  <description>Local costmap package for PointCloud-based obstacle detection and RViz visualization</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS dependencies -->
  <depend>rclcpp</depend>
  <!-- <depend>rclcpp_lifecycle</depend> Not needed for regular node -->
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>map_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- TF2 dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  
  <!-- PointCloud processing dependencies -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  
  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>